--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "cross-env": "^7.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "redis": "^3.0.2"
   }
 }
