--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "redis": "^3.0.2"
+    "body-parser": "^1.19.0",
+    "redis": "^3.0.2",
+    "xss": "^1.0.8"
   }
 }
